Unify context menus for tracks and fix some tracklists not showing up

--- a/src/components/track-list/track-list.module.scss
+++ b/src/components/track-list/track-list.module.scss
@@ -46,4 +46,5 @@
 
 .trackList {
 	margin-top: 8px;
+	min-height: 1px; /* 0 height makes some tracklists disappear if they're at the bottom of a page */
 }
